--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '~@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$dynamicForm-primary: mat.define-palette(mat.$indigo-palette);
+$dynamicForm-accent: mat.define-palette(mat.$blue-grey-palette);
+
+// The warn palette is optional (defaults to red).
+$dynamicForm-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$dynamicForm-theme: mat.define-light-theme((color: (primary: $dynamicForm-primary,
+      accent: $dynamicForm-accent,
+      warn: $dynamicForm-warn,
+    )));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($dynamicForm-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  width: 100%;
+  min-height: 100%;
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
+}
+
+body {
+  font-family: inherit;
+  line-height: inherit;
+}
