--- a/src/@lib/components/dynamic-form/dynamic-field/fields/checkbox/checkbox.component.html
+++ b/src/@lib/components/dynamic-form/dynamic-field/fields/checkbox/checkbox.component.html
@@ -1,3 +1,3 @@
-<mat-checkbox [formControlName]="field.name ?? ''" [formGroup]="group">
+<mat-checkbox [formControlName]="field.name ?? ''" [formGroup]="group" [ngClass]="field.class ?? ''">
   {{field.label}}
 </mat-checkbox>
