--- a/src/@lib/components/dynamic-form/dynamic-field/fields/input/input.component.html
+++ b/src/@lib/components/dynamic-form/dynamic-field/fields/input/input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" [formGroup]="group">
+<mat-form-field appearance="outline" [formGroup]="group" [ngClass]="field.class ?? ''">
   <mat-label>{{ field.label }}</mat-label>
   <input matInput [type]="field.inputType ?? 'text'" [formControlName]="field.name ?? ''">
   <ng-container *ngFor="let validation of field.validations;" ngProjectAs="mat-error">
