--- a/src/@lib/components/dynamic-form/dynamic-form.component.html
+++ b/src/@lib/components/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,4 @@
 <form class="dynamic-form" [formGroup]="form" (submit)="onSubmit($event)">
-  <dynamic-section *ngFor="let section of config.sections" [config]="section" [group]="form">
+  <dynamic-section [config]="config" [group]="form">
   </dynamic-section>
 </form>
